mensaje de validacion

--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -172,6 +172,7 @@
                                         <f:validateLength minimum="3" maximum="40"/>
                                     </h:inputText>
                                 </div>
+                                <h:message for="nombre"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="apellidoPaterno" for="apellidoPaterno"/>
@@ -183,6 +184,7 @@
                                         <f:validateLength minimum="3" maximum="50"/>
                                     </h:inputText>
                                 </div>
+                                <h:message for="apellidoPaterno"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="apellidoMaterno" for="apellidoMaterno"/>
@@ -194,6 +196,7 @@
                                            <f:validateLength minimum="3" maximum="50"/>
                                     </h:inputText>
                                 </div>
+                                <h:message for="apellidoMaterno"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="sexo" for="sexo"/>
@@ -207,6 +210,7 @@
                                         <f:validateRequired/>
                                     </h:selectOneMenu>
                                 </div>
+                                <h:message for="sexo"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="contrasenia" for="contrasenia"/>
@@ -219,6 +223,7 @@
                                             <f:validateLength />
                                     </h:inputText>
                                 </div>
+                                <h:message for="contrasenia"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="correoEletronico" for="correoEletronico"/>
@@ -230,6 +235,7 @@
                                              <f:validateLength minimum="5" maximum="150"/>
                                     </h:inputText>
                                 </div>
+                                <h:message for="correoEletronico"/>
                             </div>
                         </div>
                     </div>
