--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -150,7 +150,7 @@
                     </div>
                     <div class="uk-modal-body">
                         <div uk-grid="">
-                            <div class="uk-width-1-1@s uk-width-1-3@m">
+                            <div class="uk-width-1-1@s uk-width-1-4@m">
                                 <h:outputLabel value="apodo" for="apodo"/>
                                 <div class="uk-form-controls">
                                     <h:inputText id="apodo"
@@ -160,7 +160,7 @@
                                         <f:validateLength minimum="3" maximum="40"/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="apodo"/>
+                                <h:message for="apodo" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="nombre" for="nombre"/>
@@ -172,7 +172,7 @@
                                         <f:validateLength minimum="3" maximum="40"/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="nombre"/>
+                                <h:message for="nombre" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="apellidoPaterno" for="apellidoPaterno"/>
@@ -184,7 +184,7 @@
                                         <f:validateLength minimum="3" maximum="50"/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="apellidoPaterno"/>
+                                <h:message for="apellidoPaterno" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="apellidoMaterno" for="apellidoMaterno"/>
@@ -196,7 +196,7 @@
                                            <f:validateLength minimum="3" maximum="50"/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="apellidoMaterno"/>
+                                <h:message for="apellidoMaterno" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="sexo" for="sexo"/>
@@ -210,7 +210,7 @@
                                         <f:validateRequired/>
                                     </h:selectOneMenu>
                                 </div>
-                                <h:message for="sexo"/>
+                                <h:message for="sexo" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="contrasenia" for="contrasenia"/>
@@ -223,7 +223,7 @@
                                             <f:validateLength />
                                     </h:inputText>
                                 </div>
-                                <h:message for="contrasenia"/>
+                                <h:message for="contrasenia" styleClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel value="correoEletronico" for="correoEletronico"/>
@@ -235,7 +235,7 @@
                                              <f:validateLength minimum="5" maximum="150"/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="correoEletronico"/>
+                                <h:message for="correoEletronico" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                         </div>
                     </div>
