--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -240,12 +240,14 @@
                         </div>
                     </div>
                     <div class="uk-modal-footer uk-flex uk-flex-right">
-                        <h:commandButton value="enviar"/>
+                        <h:commandButton value="enviar" styleClass="uk-button uk-button-secondary">
+                            <f:ajax execute="@form" listener="#{administracionProfesorControlador.inserta}" render="@form"/>
+                        </h:commandButton>
                     </div>
                 </h:form>
             </div>
         </h:panelGroup>
-
+        <h:outputScript library="js" name="administracion/profesores.js"/>
     </ui:define>
 
 </ui:composition>
