--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -240,8 +240,8 @@
                         </div>
                     </div>
                     <div class="uk-modal-footer uk-flex uk-flex-right">
-                        <button type="reset" class="uk-button uk-button-default uk-modal-close ">
-                            cancelar
+                        <button type="reset" class="uk-button uk-button-default uk-margin-small-right">
+                            #{boton['cancel']}
                         </button>
                         <h:commandButton value="enviar" styleClass="uk-button uk-button-secondary">
                             <f:ajax execute="@form" listener="#{administracionProfesorControlador.inserta}" render="@form"/>
