--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -59,70 +59,44 @@
                 <div class="uk-card-header">
                     <div class="uk-grid uk-grid-small">
                         <div class="uk-width-1-3"><h4 class="uk-text-capitalize"><span class="uk-text-middle">Teachers</span></h4></div>
-                        <div class="uk-width-1-3">
-                            <h:form styleClass="uk-search largo-buscar" id="formulario-filtrado-escuela">
-                                <div class="uk-inline">
-                                    <h:commandLink styleClass="uk-form-icon uk-form-icon-flip uk-light uk-background-primary"
-                                                   id="comando-busqueda"
-                                                   pt:uk-icon="icon: search"
-                                                   pt:uk-tooltip="title: Dar click en la lupa para buscar; delay:2000; pos:right"
-                                                   rendered="#{empty escuelaDashboardControlador.busqueda}">
-                                        <f:ajax render="formulario-tabla-escuela @form" execute="filtrado" listener="#{escuelaDashboardControlador.actualizaDataModel}"/>
-                                    </h:commandLink>
-                                    <h:commandLink styleClass="uk-form-icon uk-light uk-form-icon-flip uk-background-secondary"
-                                                   pt:uk-icon="icon: close"
-                                                   pt:uk-tooltip="title: Dar click para borrar busqueda; delay:2000; pos:right"
-                                                   action="#{escuelaDashboardControlador.actualizaDataModel}"
-                                                   rendered="#{not empty escuelaDashboardControlador.busqueda}">
-                                        <f:setPropertyActionListener value="#{null}" target="#{escuelaDashboardControlador.busqueda}"/>
-                                        <f:ajax render="formulario-tabla-escuela @form"/>
-                                    </h:commandLink>
-                                    <h:inputText id="filtrado" disabled="#{empty escuelaDashboardControlador.collectionDataModel.wrappedData}"
-                                                 styleClass="#{empty escuelaDashboardControlador.busqueda ? 'uk-input' : 'uk-input filtrar uk-light'}"
-                                                 pt:placeholder="#{etiqueta['search']}"
-                                                 autocomplete="off"
-                                                 value="#{escuelaDashboardControlador.busqueda}"
-                                                 pt:uk-tooltip="title: #{empty escuelaDashboardControlador.collectionDataModel.wrappedData
-                                                        ? administracion['dashboard.search.tooltip.diseble']
-                                                        : administracion['dashboard.search.tooltip.enable']}; delay:2000; pos:left">
-                                    </h:inputText>
-                                </div>
-                            </h:form>
-                        </div>
                         <div class="uk-width-expand uk-text-right panel-icons">
                             <h:form id="formulario-agregar-profesor">
+                                <ui:remove>
                                 <h:commandLink styleClass="uk-icon-link"
                                                pt:uk-icon="icon: plus-circle; ratio: 1.5"
                                                pt:uk-toggle="target: #modal-escuela"
                                                pt:uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000">
                                     <f:ajax listener="#{escuelaDashboardControlador.limpiaDetalleModelo}" render="formulario-escuela" onevent="function limpia(data) { limpiaSelect(data); }"/>
                                 </h:commandLink>
+                                </ui:remove>
+                                <a href="#" class="uk-icon-link" uk-icon="icon: plus-circle; ratio: 1.5" uk-toggle="target: #modal-profesor" uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000"/>
                             </h:form>
                         </div>
                     </div>
                 </div>
                 <div class="uk-card-body">
-                    <h:panelGroup layout="block" rendered="#{empty administracionProfesorControlador.profesorModeloLista}">
-                        <table class="uk-table uk-table-middle">
-                            <thead class="uk-background-primary">
-                            <tr>
-                                <th class="uk-text-center"><span class="letra-titulo">Apodo</span></th>
-                                <th class="uk-text-center"><span class="letra-titulo">Nombre</span></th>
-                                <th class="uk-text-center"><span class="letra-titulo">Sexo</span></th>
-                                <th class="uk-text-center"><span class="letra-titulo">Correo</span></th>
-                            </tr>
-                            </thead>
-                            <tbody>
+                    <h:form id="formulario-tabla">
+                        <h:panelGroup layout="block" rendered="#{empty administracionProfesorControlador.profesorModeloLista}">
+                            <table class="uk-table uk-table-middle">
+                                <thead class="uk-background-primary">
                                 <tr>
-                                    <td colspan="4">
-                                        <div class="uk-flex uk-flex-center">
-                                            <h:graphicImage library="img" name="vacio.svg" height="215" width="243" alt="vacio"/>
-                                        </div>
-                                    </td>
+                                    <th class="uk-text-center"><span class="letra-titulo">Apodo</span></th>
+                                    <th class="uk-text-center"><span class="letra-titulo">Nombre</span></th>
+                                    <th class="uk-text-center"><span class="letra-titulo">Sexo</span></th>
+                                    <th class="uk-text-center"><span class="letra-titulo">Correo</span></th>
                                 </tr>
-                            </tbody>
-                        </table>
-                    </h:panelGroup>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td colspan="4">
+                                            <div class="uk-flex uk-flex-center">
+                                                <h:graphicImage library="img" name="vacio.svg" height="215" width="243" alt="vacio"/>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </h:panelGroup>
                         <h:dataTable id="table-prfesor"
                                      value="#{administracionProfesorControlador.profesorModeloLista}"
                                      var="profesorModelo"
@@ -170,6 +144,7 @@
                                 </div>
                             </h:column>
                         </h:dataTable>
+                    </h:form>
                 </div>
                 <div class="uk-card-footer" id="botones-navegacion">
                     <div></div>
@@ -260,7 +235,7 @@
                                                  styleClass="uk-input"
                                                  value="#{administracionProfesorControlador.profesorModelo.contrasenia}">
                                             <f:validateRequired/>
-                                            <f:validateLength />
+                                            <f:converter converterId="tecolotl.web.ContraseniaConvertidor"/>
                                     </h:inputText>
                                 </div>
                                 <h:message for="contrasenia" styleClass="uk-text-danger uk-display-block primera-mayuscula"/>
@@ -284,7 +259,10 @@
                             #{boton['cancel']}
                         </button>
                         <h:commandButton value="enviar" styleClass="uk-button uk-button-secondary">
-                            <f:ajax execute="@form" listener="#{administracionProfesorControlador.inserta}" render="@form"/>
+                            <f:ajax execute="@form"
+                                    listener="#{administracionProfesorControlador.inserta(administracionProfesorControlador.claveCentroTrabajo)}"
+                                    render="@form formulario-tabla"
+                                    onevent="function funcion(data) { cerrarModal(data, 'modalProfresor'); }"/>
                         </h:commandButton>
                     </div>
                 </h:form>
