--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -165,7 +165,7 @@
                     </div>
                     <div class="uk-modal-body">
                         <div uk-grid="">
-                            <div class="uk-width-1-1@s uk-width-1-2@m">
+                            <div class="uk-width-1-1@s uk-width-1-6@m">
                                 <h:outputLabel value="apodo" for="apodo"/>
                                 <div class="uk-form-controls">
                                     <h:inputText id="apodo"
@@ -177,7 +177,7 @@
                                 </div>
                                 <h:message for="apodo" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
-                            <div class="uk-width-1-1@s uk-width-1-2@m">
+                            <div class="uk-width-1-1@s uk-width-1-4@m">
                                 <h:outputLabel value="nombre" for="nombre"/>
                                 <div class="uk-form-controls">
                                     <h:inputText id="nombre"
@@ -189,7 +189,7 @@
                                 </div>
                                 <h:message for="nombre" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
-                            <div class="uk-width-1-1@s uk-width-1-2@m">
+                            <div class="uk-width-1-1@s uk-width-1-4@m">
                                 <h:outputLabel value="apellidoPaterno" for="apellidoPaterno"/>
                                 <div class="uk-form-controls">
                                     <h:inputText id="apellidoPaterno"
@@ -201,7 +201,7 @@
                                 </div>
                                 <h:message for="apellidoPaterno" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
-                            <div class="uk-width-1-1@s uk-width-1-2@m">
+                            <div class="uk-width-1-1@s uk-width-1-4@m">
                                 <h:outputLabel value="apellidoMaterno" for="apellidoMaterno"/>
                                 <div class="uk-form-controls">
                                     <h:inputText id="apellidoMaterno"
@@ -213,13 +213,13 @@
                                 </div>
                                 <h:message for="apellidoMaterno" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
-                            <div class="uk-width-1-1@s uk-width-1-3@m">
+                            <div class="uk-width-1-1@s uk-width-1-6@m">
                                 <h:outputLabel value="sexo" for="sexo"/>
                                 <div class="uk-form-controls">
                                     <h:selectOneMenu id="sexo"
                                                      styleClass="uk-select"
                                                      value="#{administracionProfesorControlador.profesorModelo.sexo}">
-                                        <f:selectItem itemValue="#{null}" itemLabel="#{etiqueta['select']}" noSelectionOption="true"/>
+                                        <f:selectItem itemValue="#{null}" itemLabel="#{etiqueta['options']}" noSelectionOption="true"/>
                                         <f:selectItem itemValue="m" itemLabel="Masculino"/>
                                         <f:selectItem itemValue="f" itemLabel="Femenino"/>
                                         <f:validateRequired/>
