--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -97,12 +97,11 @@
                                     </div>
                                     <div class="uk-card-footer" data-actividad="#{actividadModelo.idActividad}">
                                         <h:panelGroup layout="block" styleClass=" uk-flex uk-flex-center">
-                                                    <h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/>
-                                                    <span uk-icon="icon: file-text" data-uk-tooltip="title:Grammar"/>
+                                                    <span data-uk-tooltip="title: Grammar"><h:graphicImage  styleClass="uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/></span>
+<!--                                                    <span uk-icon="icon: file-text" data-uk-tooltip="title:Grammar"/>-->
                                                     <span uk-icon="icon: file-text" data-uk-tooltip="title:Didactic Guide"/>
                                                     <span uk-icon="icon: commenting" data-uk-tooltip="title: Cards"/>
-                                                    <span uk-icon="icon: file-edit" data-uk-tooltip="title: Discussion"/>
-                                                    <span uk-icon="icon: pencil" data-uk-tooltip="title: Lesson"/>
+                                                    <span uk-icon="icon: file-edit" data-uk-tooltip="title: Think-Develop and Share"/>
                                             <ui:remove>
                                                 <div class="uk-width-expand ">
                                                     <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
